--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "expo": "^49.0.6",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~50.0.8",
+    "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.4",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.0"
   },
   "private": true
 }
