--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React-Timer",
+  "name": "react-timer",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
@@ -12,7 +12,6 @@
     "@expo/webpack-config": "^19.0.0",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
-    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
