--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "expo": "~50.0.8",
+    "expo-constants": "~15.4.5",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.7",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.3.2",
-    "expo-router": "~3.4.7",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "expo-linking": "~6.2.2",
-    "expo-constants": "~15.4.5"
+    "react-native-web": "~0.19.6",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
