--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/slider": "4.4.2",
     "expo": "~50.0.8",
     "expo-constants": "~15.4.5",
@@ -17,6 +18,7 @@
     "expo-router": "~3.4.7",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
