Non working test code

--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "react-native",
+    "testEnvironment": "jest-environment-jsdom"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^1.0.0-beta.38",
@@ -36,7 +41,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "@testing-library/react": "^15.0.2",
     "@types/react": "~18.2.14",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^5.3.0"
   },
   "private": true
